--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "type-check": "tsc --noEmit",
     "clean": "rimraf .next",
     "update-data": "node scripts/update-data.js",
+    "check-vulnerable-drivers": "node scripts/check-vulnerable-drivers.js",
+    "check-results": "node scripts/check-results.js",
     "postinstall": "pnpm run type-check"
   },
   "dependencies": {
@@ -19,7 +21,8 @@
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
