fix: Load LOLDrivers data as a hashtable for improved data handling

--- a/.github/workflows/check-vulnerable-drivers.yml
+++ b/.github/workflows/check-vulnerable-drivers.yml
@@ -219,7 +219,7 @@ jobs:
         }
         
         Write-Host "Loading drivers from: $localJsonPath"
-        $loldrivers = Get-Content -Path $localJsonPath -Raw | ConvertFrom-Json
+        $loldrivers = Get-Content -Path $localJsonPath -Raw | ConvertFrom-Json -AsHashTable
         
         if (-not $loldrivers) {
             Write-Error "Could not load LOLDrivers data from local file"
